--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,29 @@
 spring:
+  # 배포시 AmazonEc2InstanceDataPropertySourcePostProcessor' defined in null: Cannot register bean definition error 해결
+  main:
+    allow-bean-definition-overriding: true
   # multipartFile 용량 늘려주는 설정
   servlet:
     multipart:
       max-file-size: 1024MB
       max-request-size: 1024MB
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
+
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://db-chois.cngmkj2y4q18.ap-northeast-2.rds.amazonaws.com:3306/database_chois   #h2:mem:testdb
+    driver-class-name: com.mysql.cj.jdbc.Driver #org.h2.Driver
+    username:  # aws ec2 admin name #sa
+    password:  # aws ec2 password
 
   jpa:
+    generate-ddl: true
     hibernate:
-      ddl-auto: create
-    database-platform: org.hibernate.dialect.H2Dialect
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL8Dialect  #H2Dialect
 #    defer-datasource-initialization: true
 #    show-sql: true System.out.println()
 
@@ -34,11 +40,11 @@ logging:
 cloud:
   aws:
     credentials:
-      access-key: # IAM Access-key
-      secret-key: # IAM Secret-key
+      access-key:  # IAM Access-key
+      secret-key:  # IAM Secret-key
     stack:
       auto: false
     region:
       static: ap-northeast-2
     s3:
-      bucket: # S3 bucket name
+      bucket:  # S3 bucket name
